[project]
name = "openpi-deploy"
version = "0.1.0"
description = "Deployment package for OpenPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moviepy",
    "msgpack",
    "numpy<2",
    "pillow",
    "robosuite",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/Daniel-Dainj/openpi_deploy"

[[tool.uv.index]]
name = "pypi"
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
